# dMessage

./: .env.example  .gitignore  Makefile  README.md  deployment.json
.claude/plans/: sequential-honking-torvalds.md
.github/workflows/: contracts.yml  deploy.yml  frontend.yml  soroban.yml
contracts/: Cargo.toml
contracts/gasless/: Cargo.toml  SECURITY_AUDIT.md
contracts/gasless/user_registry_gasless/: Cargo.toml
contracts/gasless/user_registry_gasless/src/: lib.rs
contracts/gasless/user_registry_gasless/test_snapshots/test/: test_created_at_preserved_on_update.1.json  test_get_user_nonexistent.1.json  test_register_accepts_p256_spki_pubkey.1.json  test_register_and_get_user.1.json  test_register_rejects_empty_username.1.json  test_register_rejects_invalid_pubkey.1.json  test_register_user_panics_without_auth.1.json  test_register_user_sponsored.1.json  test_register_user_sponsored_emits_event.1.json  test_register_user_sponsored_panics_without_sponsor_auth.1.json  test_sponsored_count_accumulates.1.json  test_username_uniqueness.1.json  test_username_update_and_release.1.json
contracts/messages/: Cargo.toml
contracts/social_graph/: Cargo.toml
contracts/user_registry/: Cargo.toml
frontend/: .env.example  .vade-report  DESIGN.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/e2e/: dashboard.spec.ts  landing.spec.ts  (+2 more)
scripts/: deploy-mainnet.sh  deploy.sh  verify.sh
tests/: package-lock.json  package.json  tsconfig.json  vitest.config.ts
user_feedback/: dMessage FeedBack  (Responses).xlsx
(+134 files in other folders)
