[package]
name = "user_registry_gasless"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "21.7.7"

[dev-dependencies]
soroban-sdk = { version = "21.7.7", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
lto = true
debug = 0
codegen-units = 1
